add url to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   "Tâm-Thân-Trí". Các bài tập/khoá học đều chú trọng rất nhiều về 3 mảng chính, động tác,
   hơi thở và reflection qua viết lách và thiền, để giúp mọi người tập Yoga 1 cách An Toàn
   - Hiệu Quả - Tràn Đầy Yêu Thương với cơ thể.
-# url: "https://yogacunglinhanh.com"
+url: "yogacunglinhanh.github.io"
 # search: true
 instagram_username: ngoclinhdnl
 facebook_username: groups/yoga.cung.linh.anh
