--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: >-
   hơi thở và reflection qua viết lách và thiền, để giúp mọi người tập Yoga 1 cách An Toàn
   - Hiệu Quả - Tràn Đầy Yêu Thương với cơ thể.
 url: "yogacunglinhanh.github.io"
+baseurl: ""
 # search: true
 instagram_username: ngoclinhdnl
 facebook_username: groups/yoga.cung.linh.anh
