--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >-
   "Tâm-Thân-Trí". Các bài tập/khoá học đều chú trọng rất nhiều về 3 mảng chính, động tác,
   hơi thở và reflection qua viết lách và thiền, để giúp mọi người tập Yoga 1 cách An Toàn
   - Hiệu Quả - Tràn Đầy Yêu Thương với cơ thể.
-url: "yogacunglinhanh.github.io"
+url: "https://www.yogacunglinhanh.com"
 baseurl: ""
 # search: true
 instagram_username: ngoclinhdnl
