--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
+      - name: Inject secrets
+        run: |
+          echo "google_script_url: ${{ secrets.GOOGLE_SCRIPT_URL }}" > _data/secrets.yml
       - name: Build with Jekyll
         run: bundle exec jekyll build
         env:
