--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,8 @@ repos:
     rev: v0.12.0
     hooks:
       - id: markdownlint
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.3
+    hooks:
+      - id: prettier
+        types_or: [css, javascript, jsx, ts, tsx, json, markdown, yaml]
