--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,5 +20,6 @@ repos:
     rev: v3.1.0
     hooks:
       - id: prettier
+        exclude: "^(_layouts/|_includes/|_sass/)"
         args: ["--print-width=150"]
         types_or: [css, javascript, jsx, ts, tsx, json, markdown, yaml, html]
