change homepage to /khoa-hoc/

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,6 @@ main:
   - title: "21 Ngày Kết Nối Với Cơ Thể"
     url: /khoa-hoc/yoga-21-ngay-ket-noi-voi-co-the/
   - title: "Giới Thiệu"
-    url: /
+    url: /gioi-thieu/
   - title: "Liên Hệ"
     url: /lien-he/
