--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,8 @@ main:
     url: /khoa-hoc/yoga-bau-vuot-can/
   - title: "21 Ngày Kết Nối Với Cơ Thể"
     url: /khoa-hoc/yoga-21-ngay-ket-noi-voi-co-the/
+  - title: "Khoá Core Reset Yoga Hồi Phục Sau Sinh"
+    url: /khoa-hoc/core-reset-yoga-hoi-phuc-sau-sinh/
   - title: "Giới Thiệu"
     url: /gioi-thieu/
   - title: "Liên Hệ"
