--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+      # - id: check-added-large-files
       - id: check-merge-conflict
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.37.1
