--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,11 @@ repos:
       - id: check-yaml
       # - id: check-added-large-files
       - id: check-merge-conflict
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.5.5
+    hooks:
+      - id: remove-tabs
+        args: [--whitespaces-count, "2"]
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.37.1
     hooks:
